Fix transport readout wrapping.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -151,6 +151,8 @@
   display: flex;
   flex-direction: row;
   align-items: baseline;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .TransportTrackTitle div {
